kubernetes-manifests/movie-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app-deployment
  labels:
    app: movie-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-app
  template:
    metadata:
      labels:
        app: movie-app
    spec:
      containers:
      - name: movie-app
        image: s4sachin/flaskapp
        ports:
        - containerPort: 5000
