kubernetes-manifests/movie-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: movie-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
