kubernetes-manifests/movie-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-app-ingress
  namespace: default
  annotations:
    spec.ingressClassName: traefik 
spec:
  rules:
    - host: movieapp.myk3shomelab.xyz 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app-service  
                port:
                  number: 80
